--- a/Vending Machine/nbproject/private/private.properties
+++ b/Vending Machine/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\y.bulsara\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\r01.lam\\AppData\\Roaming\\.tmcbeans\\8.2.0\\build.properties
