--- a/Vending Machine/nbproject/project.properties
+++ b/Vending Machine/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=vending.machine.VendingMachineUI
+main.class=vendingmachine.VendingMachineUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
